[package]
name = "ulid_simd"
version = "0.1.0"
edition = "2021"

[features]
default = ["create", "stateless"]
create = ["rand/std", "rand/std_rng"]
stateless = ["rand/thread_rng"]

[dependencies]
aligned = "0.4.2"
rand = { version = "0.9.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0" }

[[bench]]
name = "ulid_simd"
harness = false
