[package]
name = "ulid_simd"
version = "0.1.0"
edition = "2021"

[features]
default = ["default_rng"]
default_rng = ["rand/os_rng", "rand/std", "rand/std_rng"]

[dependencies]
aligned = "0.4.2"
rand = { version = "0.9.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0" }
rand = "0.9.2"

[[bench]]
name = "ulid_simd"
harness = false
